--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,1 +1,25 @@
-<p>quizz works!</p>
+<div class="quizz__container">
+  <div class="quizz_logo">
+    <img src="assets/img/logo.png" alt="" />
+    <h3>{{ title }}</h3>
+  </div>
+
+  <div class="quizz_questions">
+    <h3>{{ questionSelected.question }}</h3>
+  </div>
+
+  <div class="quizz_options">
+    <button
+      *ngFor="let option of questionSelected.options; let i = index"
+      (click)="playerChoose(option.alias)"
+      class="btn-option"
+    >
+      {{ option.name }}
+    </button>
+  </div>
+
+  <div *ngIf="!finished" class="quizz_results">
+    <h1>O seu resultado</h1>
+    <p>Resposta selecionada</p>
+  </div>
+</div>
