--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -4,11 +4,11 @@
     <h3>{{ title }}</h3>
   </div>
 
-  <div class="quizz_questions">
+  <div *ngIf="!finished" class="quizz_questions">
     <h3>{{ questionSelected.question }}</h3>
   </div>
 
-  <div class="quizz_options">
+  <div *ngIf="!finished" class="quizz_options">
     <button
       *ngFor="let option of questionSelected.options; let i = index"
       (click)="playerChoose(option.alias)"
@@ -18,8 +18,8 @@
     </button>
   </div>
 
-  <div *ngIf="!finished" class="quizz_results">
+  <div *ngIf="finished" class="quizz_results">
     <h1>O seu resultado</h1>
-    <p>Resposta selecionada</p>
+    <p>{{ answerSelected }}</p>
   </div>
 </div>
